# DingusLang

./: CMakeLists.txt  README.md
include/: astPrinter.h  expr.h  lexer.h  parser.h  stmt.h  token.h
src/: astPrinter.cpp  lexer.cpp  main.cpp  parser.cpp
